--- a/package.json
+++ b/package.json
@@ -2,18 +2,27 @@
   "name": "capacity-node-autorouter",
   "module": "index.ts",
   "type": "module",
+  "scripts": {
+    "start": "cosmos"
+  },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
     "@types/bun": "latest",
+    "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^4.3.4",
     "bun-match-svg": "^0.0.9",
+    "react": "^19.0.0",
     "react-cosmos": "^6.2.3",
+    "react-cosmos-plugin-vite": "^6.2.0",
+    "react-dom": "^19.0.0",
     "vite": "^6.0.11"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "graphics-debug": "^0.0.8",
     "use-mouse-matrix-transform": "^1.3.0"
   }
 }
