segment generation (no merge yet) and visual

--- a/biome.json
+++ b/biome.json
@@ -29,7 +29,7 @@
         "noExplicitAny": "off"
       },
       "complexity": {
-        "noForEach": "info"
+        "noForEach": "off"
       },
       "style": {
         "noUselessElse": "off",
