--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
-    "graphics-debug": "^0.0.14",
+    "@tscircuit/math-utils": "^0.0.10",
+    "graphics-debug": "^0.0.15",
     "use-mouse-matrix-transform": "^1.3.0"
   }
 }
