--- a/biome.json
+++ b/biome.json
@@ -32,6 +32,7 @@
         "noForEach": "off"
       },
       "style": {
+        "useImportType": "off",
         "noUselessElse": "off",
         "noNonNullAssertion": "off",
         "useNumberNamespace": "off",
