--- a/biome.json
+++ b/biome.json
@@ -31,6 +31,9 @@
       "complexity": {
         "noForEach": "off"
       },
+      "a11y": {
+        "useButtonType": "off"
+      },
       "style": {
         "useImportType": "off",
         "noUselessElse": "off",
