--- a/biome.json
+++ b/biome.json
@@ -31,6 +31,9 @@
       "complexity": {
         "noForEach": "off"
       },
+      "correctness": {
+        "useExhaustiveDependencies": "off"
+      },
       "a11y": {
         "useButtonType": "off"
       },
