--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
   },
   "dependencies": {
     "@tscircuit/math-utils": "^0.0.10",
+    "add": "^2.0.6",
+    "circuit-json-to-connectivity-map": "^0.0.18",
+    "npm": "^11.1.0",
     "use-mouse-matrix-transform": "^1.3.0"
   }
 }
