--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "capacity-node-autorouter",
-  "module": "index.ts",
+  "name": "@tscircuit/capacity-autorouter",
+  "main": "./dist/index.js",
   "type": "module",
   "scripts": {
     "start": "cosmos",
-    "build": "bun build --bundle ./lib/index.ts --outfile ./dist/index.js"
+    "build": "bun build --bundle ./lib/index.ts --outfile ./dist/index.js && tsc --emitDeclarationOnly --declaration --outDir dist"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
@@ -22,16 +22,13 @@
     "react-dom": "18",
     "recharts": "^2.15.1",
     "vite": "^6.0.11",
-    "vite-tsconfig-paths": "^5.1.4"
+    "vite-tsconfig-paths": "^5.1.4",
+    "@tscircuit/math-utils": "^0.0.10",
+    "circuit-json-to-connectivity-map": "^0.0.19",
+    "use-mouse-matrix-transform": "^1.3.0"
   },
   "peerDependencies": {
-    "typescript": "^5.0.0"
+    "typescript": "^5.7.3"
   },
-  "dependencies": {
-    "@tscircuit/math-utils": "^0.0.10",
-    "add": "^2.0.6",
-    "circuit-json-to-connectivity-map": "^0.0.19",
-    "npm": "^11.1.0",
-    "use-mouse-matrix-transform": "^1.3.0"
-  }
+  "dependencies": {}
 }
