--- a/package.json
+++ b/package.json
@@ -4,28 +4,29 @@
   "type": "module",
   "scripts": {
     "start": "cosmos",
-    "build": "bun build --bundle ./lib/index.ts --outfile ./dist/index.js && tsc --emitDeclarationOnly --declaration --outDir dist"
+    "build": "bun build --bundle ./lib/index.ts --outfile ./dist/index.js && dts-bundle-generator -o ./dist/index.d.ts ./lib/index.ts"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
     "@react-hook/resize-observer": "^2.0.2",
+    "@tscircuit/math-utils": "^0.0.10",
     "@types/bun": "latest",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@vercel/node": "^5.1.7",
     "@vitejs/plugin-react": "^4.3.4",
     "bun-match-svg": "^0.0.9",
+    "circuit-json-to-connectivity-map": "^0.0.19",
+    "dts-bundle-generator": "^9.5.1",
     "graphics-debug": "^0.0.19",
     "react": "18",
     "react-cosmos": "^6.2.3",
     "react-cosmos-plugin-vite": "^6.2.0",
     "react-dom": "18",
     "recharts": "^2.15.1",
+    "use-mouse-matrix-transform": "^1.3.0",
     "vite": "^6.0.11",
-    "vite-tsconfig-paths": "^5.1.4",
-    "@tscircuit/math-utils": "^0.0.10",
-    "circuit-json-to-connectivity-map": "^0.0.19",
-    "use-mouse-matrix-transform": "^1.3.0"
+    "vite-tsconfig-paths": "^5.1.4"
   },
   "peerDependencies": {
     "typescript": "^5.7.3"
