--- a/biome.json
+++ b/biome.json
@@ -8,7 +8,13 @@
     "indentStyle": "space"
   },
   "files": {
-    "ignore": ["cosmos-export", "dist", "package.json"]
+    "ignore": [
+      "cosmos-export",
+      "dist",
+      "package.json",
+      "examples/assets/segmenttopoint3.json",
+      "examples/assets/contribution-board_routes.json"
+    ]
   },
   "javascript": {
     "formatter": {
