more renaming fixes, fix high density routing too close to edges

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,9 @@
 
     "baseUrl": ".",
     "paths": {
-      "lib/*": ["lib/*"]
+      "lib/*": ["lib/*"],
+      "examples/*": ["examples/*"],
+      "tests/*": ["tests/*"]
     },
 
     // Bundler mode
