--- a/biome.json
+++ b/biome.json
@@ -42,7 +42,8 @@
         "useExhaustiveDependencies": "off"
       },
       "a11y": {
-        "useButtonType": "off"
+        "useButtonType": "off",
+        "noLabelWithoutControl": "off"
       },
       "style": {
         "useImportType": "off",
