add vercel build script

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "start": "cosmos",
     "build": "tsup ./lib/index.ts --external @tscircuit/core --external circuit-to-svg --format esm --dts --sourcemap",
     "format": "biome format --write .",
-    "format:check": "biome format ."
+    "format:check": "biome format .",
+    "vercel-build": "cosmos-export"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
