--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-cosmos": "^6.2.3",
     "react-cosmos-plugin-vite": "^6.2.0",
     "react-dom": "18",
+    "react-konva": "18",
     "recharts": "^2.15.1",
     "tsup": "^8.3.6",
     "use-mouse-matrix-transform": "^1.3.0",
