--- a/package.json
+++ b/package.json
@@ -36,8 +36,7 @@
     "tsup": "^8.3.6",
     "use-mouse-matrix-transform": "^1.3.0",
     "vite": "^6.0.11",
-    "vite-tsconfig-paths": "^5.1.4",
-    "@datastructures-js/priority-queue": "^6.3.2"
+    "vite-tsconfig-paths": "^5.1.4"
   },
   "peerDependencies": {
     "typescript": "^5.7.3"
