--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
     "@react-hook/resize-observer": "^2.0.2",
+    "@tscircuit/checks": "^0.0.30",
     "@tscircuit/core": "^0.0.337",
     "@tscircuit/math-utils": "^0.0.10",
     "@types/bun": "latest",
@@ -36,6 +37,7 @@
     "recharts": "^2.15.1",
     "tsup": "^8.3.6",
     "use-mouse-matrix-transform": "^1.3.0",
+    "@tscircuit/circuit-json-util": "^0.0.45",
     "vite": "^6.0.11",
     "vite-tsconfig-paths": "^5.1.4"
   },
