fix type issues

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,5 +30,6 @@
     "noUnusedLocals": false,
     "noUnusedParameters": false,
     "noPropertyAccessFromIndexSignature": false
-  }
+  },
+  "exclude": ["examples/assets/**/*.json"]
 }
