--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
+    "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-menubar": "^1.1.14",
     "@react-hook/resize-observer": "^2.0.2",
     "@tscircuit/checks": "^0.0.36",
     "@tscircuit/circuit-json-util": "^0.0.46",
@@ -33,6 +35,7 @@
     "bun-match-svg": "^0.0.9",
     "circuit-json-to-connectivity-map": "^0.0.19",
     "circuit-to-svg": "^0.0.110",
+    "clsx": "^2.1.1",
     "flatbush": "^4.4.0",
     "graphics-debug": "^0.0.42",
     "rbush": "^4.0.1",
@@ -42,6 +45,7 @@
     "react-dom": "18",
     "react-konva": "18",
     "recharts": "^2.15.1",
+    "tailwind-merge": "^3.2.0",
     "tsup": "^8.3.6",
     "use-mouse-matrix-transform": "^1.3.0",
     "vite": "^6.0.11",
