add bug report, add script to download bug reports

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "format": "biome format --write .",
     "format:check": "biome format .",
     "vercel-build": "cosmos-export",
-    "repomix:lib": "repomix --ignore 'testing/**,**/TwoRouteHighDensitySolver/**,**/RouteStitchingSolver/**,solvers/CapacitySegmentPointOptimizer/CapacitySegmentPointOptimizer.ts' lib"
+    "repomix:lib": "repomix --ignore 'testing/**,**/TwoRouteHighDensitySolver/**,**/RouteStitchingSolver/**,solvers/CapacitySegmentPointOptimizer/CapacitySegmentPointOptimizer.ts' lib",
+    "bug-report": "bun run scripts/download-bug-report.ts"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
