--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@tscircuit/circuit-json-util": "^0.0.46",
     "@tscircuit/core": "^0.0.337",
     "@tscircuit/math-utils": "^0.0.18",
-    "@types/bun": "latest",
+    "@types/bun": "^1.2.16",
     "@types/fast-json-stable-stringify": "^2.1.2",
     "@types/object-hash": "^3.0.6",
     "@types/rbush": "^4.0.0",
