--- a/biome.json
+++ b/biome.json
@@ -12,8 +12,7 @@
       "cosmos-export",
       "dist",
       "package.json",
-      "examples/assets/segmenttopoint3.json",
-      "examples/assets/contribution-board_routes.json"
+      "examples/assets/*.json"
     ]
   },
   "javascript": {
